[tool.poetry]
name = "panchemy"
version = "0.0.2"
description = "A library for data handler between SQLAlchemy and pandas"
authors = ["Alan Nguyen <nnlan.dev.98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NLanN/panchemy"
repository = "https://github.com/NLanN/panchemy"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.4.39"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
