[tool.poetry]
name = "panchemy"
version = "0.0.3"
description = "A library for data handler between SQLAlchemy and pandas"
authors = ["Alan Nguyen <nnlan.dev.98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NLanN/panchemy"
repository = "https://github.com/NLanN/panchemy"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
pandas = "^1.4.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
regex = "^2022.7.25"
mypy = "^0.770"
black = "^22.6.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
